Add partial arraycopy inlining test